--- a/205CDE Project/templates/delete.html
+++ b/205CDE Project/templates/delete.html
@@ -6,7 +6,7 @@
 <h1 style="color: white; ">Delete dishes</h1>
 
 		<label>dishID</label>
-		<input type="numver" name="dishID" class="form-cotrol">
+		<input type="number" name="dishID" class="form-cotrol">
 	<p><input type="submit" class="btn btn-primary" value="Submit"> </p>
 	</div>
 </form>
